--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,5 +54,6 @@
     </div>
 
   </div>
-
+<script src="/js/bootstrap.min.js"></script>
+<script src="/three/jquery.pin/jquery.pin.min.js"></script>
 </footer>
