--- a/css/main.scss
+++ b/css/main.scss
@@ -14,10 +14,10 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #ffeef9;
-$brand-color:      #2a7ae2;
+$background-color: #FFFFFF;
+$brand-color:      #606060;
 
-$grey-color:       #828282;
+$grey-color:       #898989;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
