--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,12 +11,11 @@
 }
 
 .site-title {
-    font-size: 26px;
+    font-size: 30px;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
-
     &,
     &:visited {
         color: $grey-color-dark;
@@ -185,7 +184,8 @@
 
 .post-link {
     display: block;
-    font-size: 20px;
+    font-size: 18px;
+    color: $grey-color;
 }
 
 
@@ -211,7 +211,7 @@
     margin-bottom: $spacing-unit;
 
     h2 {
-        font-size: 32px;
+        font-size: 22px;
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -219,7 +219,7 @@
     }
 
     h3 {
-        font-size: 26px;
+        font-size: 16px;
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -227,7 +227,7 @@
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 10px;
 
         @include media-query($on-laptop) {
             font-size: 18px;
