--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,8 +54,8 @@
     </div>
 
   </div>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/three/jquery.pin/jquery.pin.min.js"></script>
+<!-- <script src="/js/bootstrap.min.js"></script>
+<script src="/three/jquery.pin/jquery.pin.min.js"></script> -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
