--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   
   
   <link href="/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/css/style.css" rel="stylesheet">
-  <link href="/css/syntax.css" rel="stylesheet">
+  <!-- <link href="/css/style.css" rel="stylesheet"> -->
+<!--  <link href="/css/syntax.css" rel="stylesheet"> -->
   <link href="/fonts/glyphicons-halflings-regular.svg" rel="stylesheet">
 </head>
