增加链接颜色 增加新博客

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,8 +83,6 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
 }
 
-
-
 /**
  * Links
  */
@@ -93,11 +91,12 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: $brand-color;
+		text-decoration: underline;
     }
 
     &:hover {
-        color: $text-color;
+        color: $page-link;
         text-decoration: underline;
     }
 }
