--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,8 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
+$page-link:        #00A3CF;
+
 $text-color:       #0084B4;
 $background-color: #FFFFFF;
 $brand-color:      #606060;
